# pytripgui

./: .buildinfo  .deepsource.toml  .flake8  .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  DEBUG_SEGFAULTS.md  LICENSE.rst  MANIFEST.in  MIGRATION_TO_PYPROJECT.md  MODERNIZATION_UPDATE.md  README.md  README.rst  SEGFAULT_DEBUG_QUICKREF.md  SEGFAULT_FIXES_SUMMARY.md  appveyor.yml  authors.html  contributing.html  debug_segfaults.py  developer_notes.rst  genindex.html  index.html  install_deps.sh  install_versioneer.sh  main.spec  makeui.bat  makeui.sh  objects.inv  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  technical.html  tox.ini  user_guide.html  (+2 more)
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  release-pip.yml  sphinx.yml  test.yml  wheels.yml  windows-installer.yml
.travis/: check_package_deploy.sh  deploy_package.sh  install_linux.sh
_sources/: readme.rst.txt  technical.rst.txt
_static/: documentation_options.js
docs/: conf.py  index.rst  requirements.txt  technical.rst  usage.rst  user_guide.rst
pytrip98gui/: run_pytrip98gui.py
pytripgui/: __init__.py  _version.py  closeobj.py  data.py  developer_notes.rst  dose.py  guihelper.py  guiutil.py  leftmenu.py  main.py  main_window.py  messages.py  mvc_notes.txt  plugin.py  rbehandler.py  settings.py  settingsmanager.py  test.py  tripdata.py  tripexecparser.py  tripexecparser_old.py  util.py  version.py
pytripgui/Patient/: patient_gui_model.py
pytripgui/add_vois_vc/: __init__.py  add_vois_cont.py  add_vois_view.py  voi_widget.py
pytripgui/app_logic/: app_callbacks.py  chars.py  charts.py  gui_executor.py  patient_tree.py  viewcanvas.py
pytripgui/canvas_vc/: blit_manager.py  canvas_controller.py  canvas_plotter.py  canvas_view.py  canvas_widget.py  gui_state.py  placement_manager.py  plot_model.py  projection_selector.py
pytripgui/config_vc/: __init__.py  config_cont.py  config_view.py
pytripgui/contouring_vc/: contouring_controller.py  contouring_view.py
pytripgui/controller/: ctx.py  dos.py  dvh.py  field_cont.py  kernel_cont.py  let.py  lvh.py  main_cont.py  plan_cont.py  plot_cont.py  settings.py  settings_cont.py  tree_cont.py  tree_cont_aux.py  tree_menu_cont.py  vc_text.py  vdx.py
pytripgui/dialogs/: __init__.py  createcubedialog.py  createstructuredialog.py  dosedialog.py  fielddialog.py  plandialog.py  progressdialog.py  tripconfigdialog.py  tripexportcubedialog.py  tripexportdialog.py  triplogdialog.py  tripvoidialog.py  (+1 more)
tests/: conftest.py  requirements-test.txt  test_config.py  test_field.py  test_fieldgui.py  test_kernel_dialog.py  test_patient_tree.py  test_pytrip98gui.py  test_pytripgui.py  tree.py  treeView_test.py  viewcanvas_test.py
(+182 files in other folders)
